2 avril 2004 Mariette Yvinec
- added is_Gabriel in Delaunay_triangulation_3.h + test
- slightly changed is_Gabriel in Regular_triangulation_3 to make
  the whoe more homogeneous
- is_Gabriel is still to be documented (waiting for new wrapper
  and tools of the doc)

2 avril 2004 Mariette Yvinec
- fixes in Regular_triangulation_euclidean_traits_3.h
- added Side_of_bounded_orthogonal_sphere_3

25 March 2004 Radu Ursu
- made doc work with the new implementation of the Manual tools

6 Mars 2004 Mariette Yvinec
- move vertex_triple_index[4][3] to Triangulation_utils_base_3
- added is_Gabriel + test in Regular triangulation
  still to be done : add is_Gabriel in Delaunay 
                     use it in Alpha_shape

5 Mars 2004 Mariette Yvinec
- added predicates and constructions for weighted points in
   Regular_triangulation_euclidean_traits_3.h + testsuite

29 Feb 2004 Sylvain Pion
- locate() cleanups, performance impact unnoticeable.

28 Feb 2004 Sylvain Pion
- G++ 3.4 fixes.

26 Feb 2004 Sylvain Pion
- Fix Regular_3.

12 Feb 2004 Mariette Yvinec
- gathered preducates and constructions for weigthed points
  in constructions/constructions_on_weighted_points_cartesian_3.h
  and predicates/predicates_on_weighted_points_cartesian_3.h

10 Feb 2004 Mariette Yvinec
- added nearest_power_vertex in Regular_triangulation_3 +test + doc
- added doc for nearest_vertex_in_cell in Delaunay_triangulation_3.tex 

10 February 2004 Radu Ursu
-Updated headers in examples 

31/01/2004 Sylvain Pion
- Fix missing CGALi:: qualification.

31/01/2004 Sylvain Pion
- Shrink the GIF files.

30/01/2004 Sylvain Pion
- Use CGAL_USE_GEOMVIEW in the demos.

30/01/2004 Sylvain Pion
- Remove obsolete _MSC_VER workaround.

Version 1.190 (?? January 04)
- Move random generator to CGAL::Random.

Version 1.189 (18 January 04)
- Replace obsolete CGAL_TYPENAME_MSVC_NULL by typename.
- Remove CGAL_CFG_EARLY_INSTANTIATION_BUG.

Version 1.188 (18 January 04)
- Remove useless friend declarations.