@@ -795,9 +795,9 @@ make_vertex_triple(const Facet& f) const
   Cell_handle ch = f.first;
   int i = f.second;
   
-  return Vertex_triple(ch->vertex(vertex_triple_index[i][0]),
-		       ch->vertex(vertex_triple_index[i][1]),
-		       ch->vertex(vertex_triple_index[i][2])); 
+  return Vertex_triple(ch->vertex(vertex_triple_index(i,0)),
+		       ch->vertex(vertex_triple_index(i,1)),
+		       ch->vertex(vertex_triple_index(i,2))); 
 }
 
 
@@ -1322,18 +1322,18 @@ is_Gabriel(Cell_handle c, int i) const
 
   if ((!is_infinite(c->vertex(i))) &&
       side_of_bounded_sphere (
-	c->vertex(vertex_triple_index[i][0])->point(),
-	c->vertex(vertex_triple_index[i][1])->point(),
-	c->vertex(vertex_triple_index[i][2])->point(),
+	c->vertex(vertex_triple_index(i,0))->point(),
+	c->vertex(vertex_triple_index(i,1))->point(),
+	c->vertex(vertex_triple_index(i,2))->point(),
 	c->vertex(i)->point()) == ON_BOUNDED_SIDE ) return false;
     Cell_handle neighbor = c->neighbor(i);
   int in = neighbor->index(c);
 
   if ((!is_infinite(neighbor->vertex(in))) &&
       side_of_bounded_sphere(
-	 c->vertex(vertex_triple_index[i][0])->point(),
-	 c->vertex(vertex_triple_index[i][1])->point(),
-	 c->vertex(vertex_triple_index[i][2])->point(),	
+	 c->vertex(vertex_triple_index(i,0))->point(),
+	 c->vertex(vertex_triple_index(i,1))->point(),
+	 c->vertex(vertex_triple_index(i,2))->point(),	
 	 neighbor->vertex(in)->point()) == ON_BOUNDED_SIDE ) return false;
  
   return true;
